# dj_from_sql_project

./: db.sqlite3  main.py  manage.py  pyproject.toml  utils.py
db/: models.py
db/migrations/: 0001_initial.py
